--- a/ISRA Dummy Project/nav.css
+++ b/ISRA Dummy Project/nav.css
@@ -19,51 +19,5 @@
 ||====================================================||
 */
 nav {
-    position:absolute;
-    display:inline;
-    top:0;
-    left:0;
-    width:100%;
-    height:3.6rem;
-    background-color:black;
-    color:white;
-    font-family:Calibri;
-    font-weight:bold;
-    padding-left:3rem;
-    font-size:1.25rem;
-    padding-top:.75rem;
-}
-
-nav links{
-    padding-left:1rem;
-    display:inline-flex;
-    flex-direction:row;
-    gap:1rem;
-}
-
-nav links a{
-    text-decoration:none;
-    font-weight:lighter;
-    color:white;
-}
-
-nav button {
-    position:absolute;
-    right: 5rem;
-    top:.6rem;
-    background: none;
-    outline-style: none;
-    border: solid;
-    border-color: white;
-    border-width:.1rem;
-    padding:1rem;
-    padding-top:.2rem;
-    padding-bottom:.2rem;
-    color:white;
-    border-radius: .3rem;
-}
-
-nav button:focus, nav a:focus{
-    border-color:gray;
-    color:gray;
+    background: black !important;
 }
